Use property system to coerce model data to G_TYPE_STRING

Fixes: https://bugzilla.gnome.org/show_bug.cgi?id=423201